--- a/src/app/login-form/login-form.component.scss
+++ b/src/app/login-form/login-form.component.scss
@@ -1,4 +1,7 @@
 .hit{
+    background-image: url(https://images.unsplash.com/photo-1497296805880-3b37686c87ea?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
+    background-repeat: no-repeat;
+    size: cover;
     height: 100vh;
 }
 .wid{
