--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,10 +1,8 @@
 .mat-drawer {
-  background-color:navy;
+  background-color:rgb(0, 0, 77);
   color: #fff;
 }
-.sidenav{
-  background-color:navy !important;
-}
+
 .bg{
     background-color: white !important;
 }
