--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -20,7 +20,7 @@
                 <mat-icon class="material-icons">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
             </mat-form-field>
-            <div fxFlex fxLayoutAlign="center center" >
+            <div fxFlex fxLayoutAlign="center center" fxLayoutGap="20px" >
                 <button fxFlex="50%" routerLink="/nav" mat-raised-button>Signin</button>
                 <button fxFlex="50%" routerLink="/signup" mat-raised-button>Sign Up</button>
             </div>
