forms implemneted background pic

--- a/src/app/signup-form/signup-form.component.scss
+++ b/src/app/signup-form/signup-form.component.scss
@@ -11,3 +11,9 @@ mat-grid-tile {
 .hit{
   height: 100vh;
 }
+.hit{
+  background-image: url("../../assets/backform.jpg");
+  background-repeat: no-repeat;
+  size: cover;
+  height: 100vh;
+}
