--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <div fxFlex fxLayoutAlign="center center">
+            <div fxFlex fxLayoutAlign="center center" fxLayoutGap="20px">
                 <button fxFlex="50%" routerLink="/login" mat-raised-button >Signin</button>
                 <button fxFlex="50%" routerLink="/signup" mat-raised-button >Sign Up</button>
             </div>
