--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -8,13 +8,12 @@
 
             <mat-form-field>
                 <mat-label>Enter your email</mat-label>
-                <input matInput placeholder="pat@example.com" formControlName="email" [formControl]="email" required>
-                <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+                <input matInput placeholder="pat@example.com">
             </mat-form-field>
 
             <mat-form-field>
                 <mat-label>Enter your password</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'">
+                <input matInput  [type]="hide ? 'password' : 'text'">
                 <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                 [attr.aria-pressed]="hide">
                 <mat-icon class="material-icons">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
